server is ready for multiple users- start integration

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jquery": "^3.3.1",
     "moment": "^2.23.0",
     "mongoose": "^5.4.0",
+    "node-cron": "^2.0.3",
     "nodemon": "^1.18.9",
     "request": "^2.88.0"
   }
